<resources>
    <string name="app_name"> GoDNS </string>
    <string name="logo">Google</string>
    <string name="logo2">DNS</string>
    <string name="dns"> Google DNS </string>
    <string name="ssid"> SSID </string>
    <string name="dns1"> DNS 1 </string>
    <string name="dns2"> DNS 2 </string>
    <string name="noconect"> WIFI NOT CONNECTED </string>
    <string name="refresh"> REFRESH </string>
    <string name="sair"> Sair </string>
</resources>
